# reasoning-ting

./: .gitignore  README.md  flake.nix
analysis/: analyze.py  analyze2.py  analyze3.py  capture.sh  characterize.py  handle_capture.txt  ptt_analyze.py
deploy/: main.py  proof_leds.py  quindar_gen.py
dev/: characterize.py  portcheck.sh  tingrepl.py  uf2_to_bin.py
device-probes/: cap_all.py  cap_buttons.py  poll_probe.py  sw_probe.py
docs/: GUIDE.md  PACKAGING.md  ghidra-setup.md  reverse-engineering.md
firmware/: ep-2350_firmware_1_0_8.uf2  release-notes.txt  uf2_strings.txt
host/: 99-ting.rules  ptt_daemon.py
listener/: Cargo.toml  README.md
listener/examples/: dump_icons.rs
listener/src/: audio.rs  detect.rs  focus.rs  icon.rs  inject.rs  lib.rs  main.rs  prefs.rs
packaging/launchd/: com.thejof.reasoning-ting-listen.plist  com.thejof.some-ting-listen.plist
packaging/linux/: com.thejof.ReasoningTing.desktop  com.thejof.SomeTing.desktop  install.sh  uninstall.sh
packaging/macos/: Info.plist  bundle.sh  entitlements.plist
packaging/systemd/: reasoning-ting-listen.service  some-ting-listen.service
some-ting.rep/: project.prp
some-ting.rep/idata/00/: 00000000.prp
some-ting.rep/idata/00/~00000000.db/: changeA.grf  db.1.gbf
