[package]
name = "reasoning-ting-listen"
version = "0.1.0"
edition = "2021"
description = "Detect TING Quindar tones and drive Claude voice dictation (cross-platform)"

[lib]
name = "reasoning_ting"
path = "src/lib.rs"

[[bin]]
name = "reasoning-ting-listen"       # CLI
path = "src/main.rs"

[[bin]]
name = "reasoning-ting"             # menu-bar GUI (build with --features gui)
path = "src/bin/reasoning-ting.rs"
required-features = ["gui"]

[features]
gui = ["dep:tray-icon", "dep:tao"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hound = "3"                     # WAV reading for offline (--wav) validation
rustfft = "6"                   # FFT for the --spectrum frequency view
cpal = "0.15"                   # cross-platform audio capture
enigo = "0.2"                   # cross-platform key synthesis (X11/macOS/Windows)
# GUI (menu-bar tray) — cross-platform; macOS NSStatusItem / Linux AppIndicator
tray-icon = { version = "0.19", optional = true }
tao = { version = "0.30", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"                  # native X11 focus detection (no shelling out)

[profile.release]
opt-level = 3
lto = true
